<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cloudspace.jindun.activity.RegisterActivity"
    android:background="#fff">
    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#8b8a8a">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_register"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textColor="#000"/>
    </RelativeLayout>
    <com.cloudspace.jindun.view.CircleImageView
        android:id="@+id/register_loge"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/head3"
        android:layout_below="@id/rl"/>
    <TextView
        android:id="@+id/register_textview_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_below="@id/register_loge"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/register_et_id"
        android:layout_toRightOf="@id/register_textview_id"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_below="@id/register_loge"
        android:background="@drawable/shape_edit"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:singleLine="true"
        android:hint="@string/id_explain"
        android:textColorHint="#6a6a6a"
        android:textColor="@color/photopicker_text_40"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"/>
    <TextView
        android:id="@+id/register_textview_prass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_below="@id/register_textview_id"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/register_et_prass"
        android:layout_toRightOf="@id/register_textview_prass"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_below="@id/register_textview_id"
        android:background="@drawable/shape_edit"
        android:paddingLeft="10dp"
        android:textColor="@color/photopicker_text_40"
        android:paddingRight="10dp"
        android:textSize="15sp"
        android:hint="@string/pass_explain"
        android:textStyle="bold"
        android:singleLine="true"
        android:textColorHint="#6a6a6a"
        android:inputType="textPassword"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"/>
    <Button
        android:id="@+id/register_bt_showpass"
        android:layout_alignTop="@id/register_et_prass"
        android:layout_alignRight="@id/register_et_prass"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:text="@string/showpass"
        android:textSize="5sp"/>
    <Button
        android:id="@+id/register_bt_showpass_up"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register_et_prass"
        android:layout_marginTop="20dp"
        android:text="@string/register"/>
    <TextView
        android:id="@+id/register_tv_forgetpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgetpass"
        android:textColor="#0824fa"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:clickable="true"
        android:layout_below="@id/register_bt_showpass_up"/>

</RelativeLayout>
