<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cloudspace.jindun.activity.ForgetpassActivity"
    android:background="#fff">
    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#8b8a8a">
        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/backbtn_black"
            android:clickable="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_forgetpass"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textColor="#000"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/forget_textview_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_below="@id/rl"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="60dp"/>
    <EditText
        android:id="@+id/forget_et_id"
        android:layout_toRightOf="@id/forget_textview_id"
        android:layout_alignTop="@id/forget_textview_id"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:background="@drawable/shape_edit"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:singleLine="true"
        android:hint="@string/id_explain"
        android:textColorHint="#6a6a6a"
        android:layout_marginRight="10dp"
        />
    <TextView
        android:id="@+id/forget_textview_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/protection_image"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_below="@id/forget_textview_id"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"/>
    <Button
        android:id="@+id/forget_bt_addImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+"
        android:textSize="40sp"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:layout_below="@id/forget_textview_image"
        />
    <Button
        android:id="@+id/forget_bt_present"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/present"
        android:textSize="20sp"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:layout_below="@id/forget_bt_addImage"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forget_bt_present"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/regarding"
        android:textColor="#000"/>


</RelativeLayout>
